# IAS-FP-SWT-temp

./: .gitignore  Dockerfile  README.md  chrony.conf  cyclonedds_pc.xml  postCreate.sh  postStart.sh  requirements.txt
.devcontainer/amd/: devcontainer.json
.devcontainer/fleetbroker-pc/: devcontainer.json
.devcontainer/intel/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.devcontainer/windows/: devcontainer.json
.github/workflows/: documentation.yaml
src/sopias4_fleetbroker/: CMakeLists.txt  README.md  package.xml
src/sopias4_fleetbroker/assets/frontend/: gui.ui
src/sopias4_fleetbroker/config/: domain_bridge_namespaceless.yaml  map_server.yaml
src/sopias4_fleetbroker/doc/source/: conf.py  index.rst
src/sopias4_fleetbroker/include/sopias4_fleetbroker/: multi_robot_coordinator.hpp
src/sopias4_fleetbroker/launch/: bringup_fleetbroker.launch.py  map_server.launch.py
src/sopias4_fleetbroker/maps/: default_map.pgm  default_map.yaml
src/sopias4_fleetbroker/sopias4_fleetbroker/: gui.py  ui_object.py
src/sopias4_fleetbroker/src/: multi_robot_coordinator.cpp  sopias4_domain_bridge.cpp
src/sopias4_framework/: CMakeLists.txt  README.md  package.xml  plugin_bridge_layer.xml  plugin_bridge_planner.xml
src/sopias4_framework/assets/global_costmaps/: global_costmap.json  global_costmap_kurz.json
src/sopias4_framework/config/: amcl.yaml  rviz.rviz  rviz_testsystem.rviz  slam.yaml
src/sopias4_framework/doc/source/: advanced_infos.md  architecture.md  conf.py  creating_gui.md  index.rst  installation.md  message_def.md  modules.rst  plugin_bridges.md  running.md  sopias4_framework.nodes.rst  sopias4_framework.rst  sopias4_framework.tools.gui.rst  sopias4_framework.tools.ros2.rst  sopias4_framework.tools.rst  sopias4_framework.tools.scripts.rst  things_to_consider.md  troubleshooting.md
src/sopias4_framework/doc/source/_static/: hide_toctree_caption.css
src/sopias4_framework/include/sopias4_framework/: msgs_utils.hpp  plugin_bridge_controller.hpp  plugin_bridge_layer.hpp  plugin_bridge_planner.hpp
src/sopias4_framework/launch/: amcl.launch.py  bringup_nav2_stack.launch.py  bringup_slam.launch.py  bringup_test_system_planner.launch.py  nav2.launch.py  rviz.launch.py
src/sopias4_framework/sopias4_framework/: __init__.py
src/sopias4_framework/sopias4_framework/nodes/: __init__.py  controller_pyplugin.py  global_planner_testserver.py  gui_node.py  layer_pyplugin.py  planner_pyplugin.py  robot_manager.py
src/sopias4_framework/sopias4_framework/tools/: __init__.py
src/sopias4_framework/sopias4_framework/tools/gui/: gui_logger.py  label_subscription_handle.py
src/sopias4_framework/sopias4_framework/tools/ros2/: costmap_tools.py  drive_tools.py  node_tools.py  yaml_tools.py
src/sopias4_framework/sopias4_framework/tools/scripts/: generate_docs.py  generate_ui.py  install_extensions.sh  install_sopias4_env.sh  turtlebot_ssh_scripts.py
src/sopias4_framework/src/: msgs_utils.cpp  plugin_bridge_controller.cpp  plugin_bridge_layer.cpp  plugin_bridge_planner.cpp
src/sopias4_msgs/: CMakeLists.txt  README.md  package.xml
src/sopias4_msgs/msg/: Robot.msg  RobotStates.msg
src/sopias4_msgs/srv/: ComputeVelocityCommands.srv  CreatePlan.srv  Drive.srv  DriveToPos.srv  EmptyWithStatuscode.srv  GetNamespaces.srv  GetRobotIdentity.srv  GetRobots.srv  LaunchNav2Stack.srv  RegistryService.srv  ShowDialog.srv  StopMapping.srv  UpdateCosts.srv
