<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sopias4_msgs</name>
  <version>0.1.0</version>
  <description>This ROS2-package contains the custom interface definitions for Sopias4</description>
  <maintainer email="LeMonkay.VTIT@tutanota.com">NachtaktiverHalbaffe</maintainer>
  <license>Apache-2.0</license>

  <!-- Use both ament_cmake and ament_cmake_python to use C++ and Python nodes in same package -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- For enabling use of launch files -->
  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <!-- Python dependencies -->
  <depend>rclpy</depend>

  <!-- Package dependencies -->
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_amcl</depend>
  <depend>python3-pyqt5</depend>

  <!-- Message, service and action definition generators -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>


</package>
